[package]
name = "dc4"
version = "1.0.1"
authors = ["William R. Fraser <wfraser@codewise.org>"]
license = "MIT/Apache-2.0"
description = "a Unix 'dc' implementation in Rust"
build = "build.rs"

[dependencies]
num = "0.1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[[bin]]
name = "dc4"
doc = false
path = "src/main.rs"

[profile.release]
lto = true
