[package]
name = "dc4"
version = "2.0.1"
authors = ["William R. Fraser <wfraser@codewise.org>"]
license = "MIT/Apache-2.0"
description = "a Unix 'dc' implementation in Rust"
build = "build.rs"
edition = "2018"

[dependencies]
num-bigint = "0.3"
num-integer = "0.1"
num-traits = "0.2"

[target.'cfg(target_env = "msvc")'.build-dependencies]
winres = "0.1"

[[bin]]
name = "dc4"
doc = false
path = "src/main.rs"

[profile.release]
lto = true
